--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,16 @@
   "description": "Jomble is a job search app that allows users to apply to jobs in a very quick way by swiping over the job openings.",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@mui/material": "^5.9.3",
+    "arash-react-components": "^1.1.0",
+    "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.34.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
