--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,9 @@
   "description": "Jomble is a job search app that allows users to apply to jobs in a very quick way by swiping over the job openings.",
   "private": true,
   "dependencies": {
+    "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.9.3",
-    "arash-react-components": "^1.3.3",
+    "arash-react-components": "^1.3.4",
     "axios": "^0.27.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
